# sauron

./: .gitignore  .gitlab-ci.yml  .travis.yml  ;  Cargo.toml  Changelog.md  Notes.md  README.md  TODO.md  basic_test.sh  browser_test.sh  codecov.yml  deny.toml  justfile  parser_test.sh  rustfmt.toml  test.sh  update_readme.sh  wasm_test.sh
crates/core/: Cargo.toml
crates/core/src/: dom.rs  html.rs  lib.rs  render.rs  vdom.rs
crates/core/src/dom/: application.rs  cmd.rs  component.rs  dispatch.rs  document.rs  dom_attr.rs  dom_node.rs  dom_patch.rs  effects.rs  events.rs  http.rs  modifier.rs  program.rs  raf.rs  task.rs  template.rs  time.rs  timeout.rs  util.rs  web_component.rs  window.rs
crates/core/src/html/: attributes.rs  lookup.rs  tags.rs  units.rs
crates/core/src/svg/: attributes.rs  tags.rs
crates/core/src/vdom/: attribute.rs  diff.rs  diff_lis.rs  element.rs  leaf.rs  map_msg.rs  node.rs  node_trait.rs  patch.rs  render.rs  templated_view.rs
crates/html-parser/: Cargo.toml
crates/html-parser/src/: lib.rs
crates/html-parser/tests/: simple.rs
crates/macro/: Cargo.toml
crates/macro/src/: custom_element.rs  extract_skip_diff.rs  extract_template.rs  jss.rs  lib.rs  node.rs  skip_diff.rs  templated_view.rs  view.rs
crates/macro/src/jss/: style.rs
crates/sauron-component-macro/: Cargo.toml
crates/sauron-component-macro/src/: lib.rs
crates/sauron-core/: Cargo.toml  basic_test.sh  test.sh  test_debug.sh  test_with_measure.sh  wasm-tests.sh
crates/sauron-core/benches/: bench_view_performance.rs  nodes_benchmark.rs
crates/sauron-core/js/: define_custom_element.js
crates/sauron-core/src/: dom.rs  html.rs  jss.rs  lib.rs  map_msg.rs  render.rs  svg.rs  vdom.rs
crates/sauron-core/src/dom/: application.rs  apply_patches.rs  browser.rs  callback.rs  cmd.rs  component.rs  created_node.rs  custom_element.rs  dispatch.rs  dom_node.rs  dom_patch.rs  dom_updater.rs  effects.rs  events.rs  http.rs  modifier.rs  program.rs  raf.rs  ric.rs  task.rs  timeout.rs  util.rs  web_component.rs  window.rs
crates/sauron-core/src/html/: attributes.rs  lookup.rs  tags.rs  units.rs
crates/sauron-core/src/svg/: attributes.rs  tags.rs
crates/sauron-core/src/vdom/: attribute.rs  diff.rs  diff_lis.rs  element.rs  leaf.rs  map_msg.rs  node.rs  node_trait.rs  patch.rs
crates/sauron-core/tests/: attributes_test.rs  children_tests.rs  create_element_tests.rs  diff_patch_test.rs  diff_with_events.rs  dom_updater_test.rs  event_tests.rs  html_test.rs  keyed_subsequent_updates.rs  node_event_recycling.rs  patches_keyed.rs  test_fixtures.rs  type_id_tests.rs
crates/sauron-macro/: Cargo.toml
crates/sauron-macro/src/: custom_element.rs  jss.rs  lib.rs  node.rs  web_component.rs
crates/sauron-macro/src/jss/: style.rs
crates/sauron-macro/tests/: style_in_node.rs
crates/sauron-markdown/: Cargo.toml
crates/sauron-markdown/src/: lib.rs  markdown.rs
crates/sauron-markdown/tests/: test_code_block.rs  xss.rs
crates/sauron-md/: Cargo.toml
crates/sauron-md/src/: lib.rs  markdown.rs
crates/sauron-md/tests/: xss.rs
crates/sauron-node-macro/: Cargo.toml  README.md
crates/sauron-node-macro/src/: lib.rs  node.rs  web_component.rs
crates/sauron-node-macro/tests/: style_in_node.rs
crates/sauron-parse/: Cargo.toml
crates/sauron-parse/src/: lib.rs  parser.rs
crates/sauron-syntax/: Cargo.toml
crates/sauron-syntax/src/: lib.rs  to_syntax.rs
crates/sauron_vdom/: Cargo.toml  LICENSE  README.md
crates/sauron_vdom/examples/: simple.rs
crates/sauron_vdom/src/: callback.rs  cmd.rs  diff.rs  dispatch.rs  lib.rs  patch.rs  util.rs  view.rs  vnode.rs
crates/sauron_vdom/tests/: diff_tests.rs  lib.rs
examples/counter/: Cargo.toml  index.html  start.sh
examples/counter/src/: lib.rs
examples/data-viewer/: Cargo.toml  README.md  TODO.md  deploy.sh  index.html  reset.css  run_webapp.sh  style.css
examples/data-viewer/src/: app.rs  assets.rs  error.rs  lib.rs  views.rs  widgets.rs
examples/fancy-ui/: Cargo.toml  index.html
examples/fancy-ui/src/: frame.rs  lib.rs  status.rs  theme.rs
examples/fetch-data/: Cargo.toml  index.html  start-debug-mode.sh  start-release-mode.sh
examples/fetch-data/src/: lib.rs
examples/fetch_data/: Cargo.toml  index.html  start-debug-mode.sh
examples/fetch_data/src/: lib.rs
examples/futuristic-ui/: Cargo.toml  README.md  TODO.md  build_optimized.sh  deploy.sh  index.html  start.sh  start_optimized.sh  start_release.sh
examples/futuristic-ui/src/: animate_list.rs  frame.rs  fui_button.rs  header.rs  image.rs  lib.rs  nav_header.rs  paragraph.rs  sounds.rs  spinner.rs  theme.rs  words.rs
examples/interactive-macro-prediff/: Cargo.toml  index.html
examples/interactive-macro-prediff/src/: app.rs
examples/js-performance-benchmark-sauron/: Cargo.toml  start.sh  start_use_template.sh
examples/js-performance-benchmark-sauron/css/: main.css
examples/js-performance-benchmark-sauron/src/: lib.rs
examples/minimal/: Cargo.toml  index.html  serve.sh  start-debug-mode.sh  start-release-mode.sh
examples/minimal-macro-syntax/: Cargo.toml  index.html  start-debug-mode.sh  start-profiling.sh
examples/minimal-macro-syntax/src/: lib.rs
examples/minimal/src/: lib.rs
examples/patch_dom_node/: Cargo.toml  index.html
examples/patch_dom_node/src/: main.rs
examples/simple_app/: Cargo.toml  index.html  start.sh
examples/simple_app/src/: lib.rs
examples/ssr-forms/: Cargo.toml  start.sh
examples/ssr-forms/src/: main.rs
examples/svg-clock/: Cargo.toml  deploy.sh  index.html  start.sh
examples/svg-clock/src/: lib.rs
examples/svg-graph/: Cargo.toml  deploy.sh  index.html  serve.sh  start-debug-mode.sh  start-profiling.sh
examples/svg-graph/src/: lib.rs
examples/svg_graph/: Cargo.toml  deploy.sh  index.html  start-debug-mode.sh  start-release-mode.sh
examples/svg_graph/src/: lib.rs
examples/todomvc-macro-syntax/: Cargo.toml  index.html  serve.sh  start-debug-mode.sh  start-profiling.sh  start-release-mode-optimize-speed.sh  start-release-mode.sh
examples/todomvc-macro-syntax/src/: app.rs  lib.rs
src/: cmd.rs  (+18 more)
(+383 files in other folders)
