[package]
name = "sauron"
version = "0.56.0"
authors = [ "Jovansonlee Cesar <ivanceras@gmail.com>" ]
license = "MIT"
description = "A versatile web framework and library for building client-side and/or server-side web applications"
repository = "https://github.com/ivanceras/sauron"
documentation = "https://docs.rs/sauron"
readme = "README.md"
keywords = ["html", "dom", "web"]
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
sauron-core = { version = "0.56", path = "crates/sauron-core", default-features = false }
sauron-macro = { version = "0.56", path = "crates/sauron-macro", optional = true }
cfg-if = "0.1"

[features]
default = ["with-dom", "with-node-macro", "with-webcomponent-macro", "with-interning"]
with-dom = ["sauron-core/with-dom"]
with-lookup = ["sauron-core/with-lookup"]
with-ric = ["sauron-core/with-ric"]
with-raf = ["sauron-core/with-raf"]
with-interning = ["sauron-core/with-interning"]

# shows telemetry such as duration it took to update the dom
with-measure = ["sauron-core/with-measure"]
# log debug patches
with-debug = ["sauron-core/with-debug"]

# lets you use node! macro to write html like code in the view
with-node-macro = ["sauron-macro"]
with-webcomponent-macro = ["sauron-macro"]
custom_element = ["sauron-core/custom_element"]


[dev-dependencies]
console_error_panic_hook = "0.1"
console_log = "0.2"
log = "0.4"
wasm-bindgen-test = "0.3"
wasm-bindgen-futures = "0.4.31"
regex = "1"
async-trait = "0.1.58"

[dev-dependencies.web-sys]
version = "0.3"
features = [
    "DomTokenList",
    "HtmlInputElement",
    "Event",
    "MouseEvent",
    "InputEvent",
    "console",
    "Performance",
]


[workspace]
members = [
    "crates/*",
    "examples/*",
]

# progressive-rendering example has its own workspace
exclude = [
    "examples/custom-element",
    "examples/progressive-rendering",
]



[patch.crates-io]
#mt-dom = { git = "https://github.com/ivanceras/mt-dom.git", branch = "master" }
#mt-dom = { path = "../mt-dom" }
#jss = { git = "https://github.com/ivanceras/jss.git", branch = "master" }
#jss = { path = "../jss" }
