[package]
name = "sauron"
version = "0.60.5"
authors = [ "Jovansonlee Cesar <ivanceras@gmail.com>" ]
license = "MIT"
description = "A versatile web framework and library for building client-side and/or server-side web applications"
repository = "https://github.com/ivanceras/sauron"
documentation = "https://docs.rs/sauron"
readme = "README.md"
keywords = ["html", "dom", "web"]
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
sauron-core = { version = "0.60", path = "crates/sauron-core", default-features = false }
sauron-macro = { version = "0.60", path = "crates/sauron-macro", optional = true }

[features]
default = ["with-dom", "with-node-macro", "custom_element", "with-interning", "with-jss"]
with-dom = ["sauron-core/with-dom"]
with-lookup = ["sauron-core/with-lookup"]
with-ric = ["sauron-core/with-ric"]
with-raf = ["sauron-core/with-raf"]
with-interning = ["sauron-core/with-interning"]
with-jss = ["sauron-macro", "with-lookup"] #enable use of jss (css style in json format)

# shows telemetry such as duration it took to update the dom
with-measure = ["sauron-core/with-measure"]
# log debug patches
with-debug = ["sauron-core/with-debug"]
log-patches = ["with-debug", "sauron-core/log-patches"]

# lets you use node! macro to write html like code in the view
with-node-macro = ["sauron-macro"]
custom_element = ["sauron-macro","sauron-core/custom_element"]


[dev-dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
log = "0.4"
wasm-bindgen-test = "0.3"
wasm-bindgen-futures = "0.4.31"
regex = "1"

[dev-dependencies.web-sys]
version = "0.3"
features = [
    "DomTokenList",
    "HtmlInputElement",
    "Event",
    "MouseEvent",
    "InputEvent",
    "console",
    "Performance",
]


[workspace]
members = [
    "crates/*",
    "examples/*",
]

# progressive-rendering example has its own workspace
exclude = [
    "examples/custom-element",
    "examples/progressive-rendering",
]



[patch.crates-io]
#mt-dom = { git = "https://github.com/ivanceras/mt-dom.git", branch = "master" }
#mt-dom = { path = "../mt-dom" }
#jss = { git = "https://github.com/ivanceras/jss.git", branch = "master" }
#jss = { path = "../jss" }
