[package]
name = "sauron-component-macro"
version = "0.50.6"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
license = "MIT"
description = "An html library for building client side webapps"
repository = "https://github.com/ivanceras/sauron"
documentation = "https://docs.rs/sauron-node-macro"
readme = "../../README.md"
keywords = ["html", "dom", "web"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.95", features = ["full"] }
quote = "1"
proc-macro2 = "1"
proc-macro-crate = "1.1.3"
