[package]
name = "sauron-macro"
version = "0.55.0"
authors = ["John-John Tedro <udoprog@tedro.se>", "Jovansonlee Cesar <ivanceras@gmail.com>"]
license = "MIT"
description = "An html library for building client side webapps"
repository = "https://github.com/ivanceras/sauron"
documentation = "https://docs.rs/sauron-node-macro"
readme = "../../README.md"
keywords = ["html", "dom", "web"]
edition = "2021"

[dependencies]
syn = { version = "1", features = ["full"] }
syn-rsx = { version = "0.8" }
quote = {package = "quote", version = "1.0.3"}
proc-macro2 = { version = "1" }
once_cell = "1.8"
sauron-core = {version = "0.55.0", path = "../sauron-core", features = ["with-lookup"] }

[dev-dependencies]
sauron = { path = "../../"}

[lib]
proc-macro = true
