[package]
name = "sauron-markdown"
version = "0.40.0"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A library for parsing markdown into sauron node"
repository = "https://github.com/ivanceras/sauron"
documentation = "https://docs.rs/sauron-markdown"
keywords = ["md", "sauron", "node"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sauron-core = { version = "0.40", path = "../sauron-core" }
sauron-parse = { version = "0.40", path = "../sauron-parse", optional = true }
pulldown-cmark = { version = "0.8"}
ammonia = "3"

[dev-dependencies]
svgbob = "0.5"
sauron = {path = "../../", features = ["with-markdown"] }

[features]
default = ["include-html"]
include-html = ["sauron-parse"]
