[package]
name = "sauron-md"
version = "0.1.1"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A library for parsing markdown into sauron node"
repository = "https://github.com/ivanceras/sauron"
documentation = "https://docs.rs/sauron-md"
keywords = ["md", "sauron", "node"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sauron = { path = "../../", version = "0.25.0" }
sauron-parse = { path = "../sauron-parse", version = "0.1.0" }
pulldown-cmark = { version = "0.7.0"}
