[package]
name = "sauron-md"
version = "0.1.4"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A library for parsing markdown into sauron node"
repository = "https://github.com/ivanceras/sauron"
documentation = "https://docs.rs/sauron-md"
keywords = ["md", "sauron", "node"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sauron-core = { version = "0.29", path = "../sauron-core" }
sauron-parse = { version = "0.1", path = "../sauron-parse" }
pulldown-cmark = { version = "0.7"}
ammonia = "3"
