[package]
name = "sauron-node-macro"
version = "0.29.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT"
description = "An html library for building client side webapps"
repository = "https://github.com/ivanceras/sauron"
documentation = "https://docs.rs/sauron"
readme = "README.md"
keywords = ["html", "dom", "web"]
edition = "2018"

[dependencies]
syn = { version = "1.0.31", features = ["full"] }
quote = {package = "quote", version = "1.0.3"}
proc-macro2 = { version = "1.0.10" }
sauron-core = { path = "../sauron-core", version = "0.29" }

[dev-dependencies]
sauron = { path = "../../" }

[lib]
proc-macro = true
