[package]
name = "sauron-node-macro"
version = "0.30.0"
authors = ["John-John Tedro <udoprog@tedro.se>", "Jovansonlee Cesar <ivanceras@gmail.com>"]
license = "MIT"
description = "An html library for building client side webapps"
repository = "https://github.com/ivanceras/sauron"
documentation = "https://docs.rs/sauron-node-macro"
readme = "../../README.md"
keywords = ["html", "dom", "web"]
edition = "2018"

[dependencies]
syn = { version = "1.0.40", features = ["full"] }
syn-rsx = { version = "0.7.1" }
quote = {package = "quote", version = "1.0.3"}
proc-macro2 = { version = "1.0.10" }

[dev-dependencies]
sauron = { path = "../../", default-features = false, features = ["with-dom"] }

[lib]
proc-macro = true
