[package]
name = "sauron-parse"
version = "0.1.5"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A library for parsing html syntax"
repository = "https://github.com/ivanceras/sauron"
documentation = "https://docs.rs/sauron-parse"
keywords = ["svg", "html", "parser"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sauron-core = { version = "0.29", features = ["with-parser"], path = "../sauron-core" }
html5ever = {version = "0.25"}
markup5ever_rcdom = { version = "0.1" }
thiserror = "1.0"
log = "0.4"
