[package]
name = "sauron-syntax"
version = "0.1.0"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sauron = { path = "../../", version = "0.23.0" }
sauron_vdom = { path ="../sauron_vdom", version = "0.23.0"}
sauron-parse = { path = "../sauron-parse", version = "0.1.0" }
log = "0.4.8"
