[package]
name = "sauron-syntax"
version = "0.1.3"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A library for parsing html syntax and converting it into sauron view"
repository = "https://github.com/ivanceras/sauron"
documentation = "https://docs.rs/sauron-syntax"
keywords = ["svg", "html", "parser"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sauron = { version = "0.27" }
sauron-parse = { version = "0.1" }
log = "0.4"
