[package]
name = "sauron_vdom"
version = "0.7.0"
authors = [ "Jovansonlee Cesar <ivanceras@gmail.com>" ]
license = "MIT"
description = "A library for diffing virtual dom tree and generate patches"
repository = "https://github.com/ivanceras/sauron"
documentation = "https://docs.rs/sauron_vdom"
readme = "README.md"
keywords = ["virtual", "dom", "node", "element"]
edition = "2018"

[dependencies]
