[package]
name = "counter"
version = "0.1.0"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
sauron = { path = "../../", features = ["log-patches"] }
console_error_panic_hook = "0.1"
log = "0.4"
console_log = { version = "0.2", features = ["color"] }
