[package]
name = "data-viewer"
version = "0.1.0"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
sauron = {path = "../../"}
console_error_panic_hook = { version = "0.1", optional = true }
js-sys = "0.3"
log = "0.4"
console_log = "0.2"
restq = "0.9"
thiserror = "1.0"

[dependencies.wasm-bindgen]
version = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "History",
    "Location",
    "Node",
    "NodeList",
    "Text",
    "Window",
    "HtmlCollection",
    "Response",
]
