
[package]
name = "fetch_data"
version = "0.1.0"
authors = [ "Jovansonlee Cesar <ivanceras@gmail.com>" ]
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
sauron = { path = "../../" }
console_error_panic_hook = { version = "0.1" }
serde = { version = "1.0", features = ["serde_derive"]}
serde_json = "1.0"
log = "0.4"
console_log = "0.1"


