[package]
name = "futuristic-ui"
version = "0.1.0"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
sauron = { path = "../../", default-features = false, features = ["with-dom", "with-request-animation-frame"]}
log = "0.4"
console_log = { version = "0.2", features = ["color"] }
web-sys = { version = "0.3", features = ["HtmlAudioElement"] }
serde_json = { version = "1", features = ["preserve_order"] }
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }

[features]
with-lite-markdown = ["sauron/with-lite-markdown"]
with-measure = ["sauron/with-measure"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
